--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										</ul>
 									</div>
-									<span class="image"><img src="/images/aspen_mushrooms.jpg" alt="" /></span>
+									<span class="image"><img src="images/Aspen_mushrooms.jpg" alt="" /></span>
 								</div>
 							</section>
 
