--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p>I'm a Houston-based software developer with a background in education. My professional interests include full-stack web development, IoT, gamification, and user-centered design. I work for <a href="https://timbergrove.com" target="_blank">Timbergrove</a>.</p>
+										<p>I'm a Houston-based software developer with a background in education. My professional interests include full-stack web development, IoT, gamification, and user-centered design. I work for <a href="https://cpanel.net/" target="_blank">cPanel</a>.</p>
 										<p>On a personal note, I'm a sci-fi lover, awesome cook, and puzzle fanatic (sudoku, jigsaws, crosswords--you name it). I'm into the civic tech scene here in Houston and enjoy volunteering regularly.</p>
 										<ul class="actions">
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
